# pyHMT2D

./: .gitignore  .hmt_session.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  condarc-julia.yml  environment.yml  pytest.ini  readthedocs-environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.claude/: settings.local.json
.cursor/rules/: calibration-parametric.mdc  cli-usage.mdc  hydraulic-models.mdc  project-overview.mdc
.github/workflows/: docs.yml
docs/: LLM_AGENTIC_REFACTOR_PLAN.md  Makefile  convert_README_md_to_rst.bat  make.bat  readthedocs.yml
docs/source/: README.rst  api.md  conf.py  contents.md  contents.rst  pyHMT2D_API.rst
examples/: README.md  README.rst  run_all_examples.py
examples/HEC_RAS_Model/: Muncie2D.p01  Muncie2D.rasmap  README.md  README.rst  demo_HEC_RAS_Model.py
examples/Monte_Carlo/: README.md
examples/RAS_2D_Data/: README.md  readme.rst
examples/SRH_2D_Data/: README.md  readme.rst
examples/SRH_2D_Model/: README.md  README.rst  demo_SRH_2D_Model.py
examples/SRH_2D_Model_SIF/: README.md  demo_SRH_2D_Model_w_SIF.py
examples/SRH_2D_to_PINN/: block_in_channel.msh  block_in_channel.srhgeom  block_in_channel.srhhydro  block_in_channel.srhmat  demo_SRH_2D_to_PINN.py  mesh_points.json  readme.md
examples/calibration/: README.md
licenses/: README.md  license_pyras.txt
paper/: compile.sh  paper.bib  paper.md
pyHMT2D/: HydraulicModel.py  __about__.py  __common__.py  __init__.py
pyHMT2D/Misc/: Misc.py  (+8 more)
test/: helpers.py  test_RAS_2D_data.py  test_dummy.py
(+356 files in other folders)
