[metadata]
name = pyHMT2D
version = 1.0.0
author = Xiaofeng Liu
author_email = xiaofengliu19@gmail.com
description = Two-dimensional hydraulic modeling tools in Python
url = https://github.com/psu-efd/pyHMT2D
project_urls =
    Code=https://github.com/psu-efd/pyHMT2D
    Issues=https://github.com/psu-efd/pyHMT2D/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    SRH-2D
    HEC-RAS 2D
    2D hydraulics
    shallow water equations
    file formats
    scientific
    engineering

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
python_requires = >=3.6

[options.extras_require]
all =
    vtk
    h5py  #HDF file format
    sys
    scipy
    osgeo


